@startuml vopc_uc4_register_for_course
!pragma layout smetana
skinparam shadowing false
skinparam classAttributeIconSize 0
title UC4: Register for Course, VOPC (View of Participating Classes)

class RegistrationPage <<boundary>> {
  +displaySchedule(sections)
  +selectSection(sectionId)
  +displayConfirmation(registration)
  +displayError(message)
}

class RegistrationController <<control>> {
  +getPublishedSchedule(studentId, termId) : ScheduleView
  +register(studentId, sectionId) : Registration
  +drop(registrationId) : void
}

class RegistrationValidator <<control>> {
  +validate(student, section) : ValidationResult
  -checkPrerequisites(student, course) : boolean
  -checkCapacity(section) : boolean
  -checkTimeConflict(student, section) : boolean
  -checkCourseLoad(student, block) : boolean
}

class Student <<entity>> {
  -studentId : String
  -name : String
  -category : StudentCategory
  +hasCompleted(course) : boolean
  +getRegistrations(block) : List<Registration>
  +getCourseLoad(block) : int
}

class Registration <<entity>> {
  -registrationId : Long
  -registeredOn : LocalDateTime
  -status : RegistrationStatus
  +confirm() : void
  +drop() : void
}

class Section <<entity>> {
  -sectionId : Long
  -capacity : int
  -registeredCount : int
  -version : Long
  +hasAvailableSeat() : boolean
  +decrementAvailableSeats() : void
  +getRemainingSeats() : int
}

class Course <<entity>> {
  -code : String
  -title : String
  -level : int
  +getPrerequisites() : List<Course>
}

class Block <<entity>> {
  -blockId : Long
  -sequence : int
  -startDate : LocalDate
  -endDate : LocalDate
}

RegistrationPage --> RegistrationController : invokes
RegistrationController --> RegistrationValidator : uses
RegistrationController --> Registration : creates
RegistrationValidator ..> Student : queries
RegistrationValidator ..> Section : queries
RegistrationValidator ..> Course : queries

Student "1" -- "0..*" Registration : holds >
Section "1" -- "0..*" Registration : has >
Course "1" -- "0..*" Section : is offered as >
Block "1" -- "0..*" Section : scheduled in >
Course "0..*" -- "0..*" Course : prerequisite of >

@enduml
